--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ src="https://www.facebook.com/tr?id=932436845542354&ev=PageView&noscript=1"
 				<div class="elementor-element elementor-element-43544dc elementor-widget elementor-widget-heading" data-id="43544dc" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 			<h2 class="elementor-heading-title elementor-size-default">CONTATO:<br><br>
-Telefone: (75) 9275-0420<br>
+Telefone: (63) 3300-4189<br>
 E-mail: wa3c08yze@outlook.com</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-e709e10 elementor-widget elementor-widget-heading" data-id="e709e10" data-element_type="widget" data-widget_type="heading.default">
@@ -333,7 +333,7 @@ E-mail: wa3c08yze@outlook.com</h2>		</div>
 				<div class="elementor-element elementor-element-120dc93 elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button" data-id="120dc93" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/75992750420?text=Ol%C3%A1">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/63933004189?text=Ol%C3%A1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">CONVERSAR AGORA</span>
 					</span>
@@ -359,7 +359,7 @@ Proibido o uso, reprodução ou distribuição das imagens e conteúdos sem auto
 
 Razão Social: Kamlc - Representações Comerciais LTDA | CNPJ: 59.314.560/0001-63 <br> Data de Fundação: 05/02/2025 | Porte: Microempresa | Natureza Jurídica: Sociedade Empresária Limitada <br> Situação Cadastral: Ativa <br><br>
 
-📍 Endereço: Avenida Alphaville, 270 - Quadraw Lote 05, Bairro Universidade, Vitória da Conquista - BA, 45032-405 <br> 📞 Telefone: (77) 99152-3637 (WhatsApp) <br> ✉️ E-mail: wa3c08yze@outlook.com</h2>		</div>
+📍 Endereço: Avenida Alphaville, 270 - Quadraw Lote 05, Bairro Universidade, Vitória da Conquista - BA, 45032-405 <br> 📞 Telefone: (63) 3300-4189 <br> ✉️ E-mail: wa3c08yze@outlook.com</h2>		</div>
 				</div>
 				</div>
 		<div class="elementor-element elementor-element-e5ca64c e-flex e-con-boxed e-con e-parent" data-id="e5ca64c" data-element_type="container" data-settings="{" background_background":"classic"}"="">
